# lazzaro

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
src/lazzaro/: __init__.py
src/lazzaro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/lazzaro/cli/: __init__.py  main.py
src/lazzaro/core/: __init__.py  buffer_graph.py  interfaces.py  memory_shard.py  memory_system.py  persistence.py  profile.py  providers.py  query_cache.py  vector_store.py
src/lazzaro/dashboard/: __init__.py  api.py
src/lazzaro/dashboard/templates/: index.html
src/lazzaro/integrations/: __init__.py  adk_integration.py  autogen_integration.py  langchain_integration.py  langgraph_integration.py
src/lazzaro/models/: __init__.py  graph.py
tests/: test_basic.py  test_consolidation_semantic.py  test_lancedb_integration.py  test_persistence.py  test_profile_update.py  test_providers.py  test_v03_migration.py  test_vector_store.py
