[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lazzaro"
version = "0.2.5.1"
description = "A scalable memory system for AI agents using graph-based sharding and hierarchical clustering."
readme = "README.md"
authors = [
  { name = "Tobi Balogun", email = "tobitobitobiwhy@gmail.com" },
]
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "openai",
    "numpy",
    "networkx",
    "matplotlib",
    "plotly",
    "fastapi",
    "uvicorn",
    "jinja2",
    "lancedb",
    "pyarrow",
]

[project.scripts]
lazzaro-cli = "lazzaro.cli.main:entry_point"
lazzaro-dashboard = "lazzaro.dashboard.api:entry_point"

[project.urls]
Homepage = "https://github.com/thelaycon/lazzaro"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.css", "*.js"]
"lazzaro.dashboard" = ["templates/*.html"]
